Fix "Use default calendar" and "Assign color" being disabled.

We were listening to the wrong selection model.

BUG: 282956
BUG: 246573