akonadicollectionview.cpp
@@ -247,6 +247,9 @@ AkonadiCollectionView::AkonadiCollectionView( CalendarView *view, bool hasContex
   filterTreeViewModel->setFilterCaseSensitivity( Qt::CaseInsensitive );
   filterTreeViewModel->setObjectName( "Recursive filtering, for the search bar" );
   mCollectionview->setModel( filterTreeViewModel );
+  connect( mCollectionview->selectionModel(),
+           SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+           SLOT(updateMenu()) );
 
   //connect( searchCol, SIGNAL(textChanged(QString)),
   //         filterTreeViewModel, SLOT(setFilterFixedString(QString)) );
@@ -377,8 +380,7 @@ void AkonadiCollectionView::setCollectionSelectionProxyModel( KCheckableProxyMod
   mBaseModel->setSourceModel( mSelectionProxyModel );
   connect( mSelectionProxyModel->selectionModel(),
            SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
-           this,
-           SLOT(selectionChanged()) );
+           SLOT(updateView()) );
 }
 
 KCheckableProxyModel *AkonadiCollectionView::collectionSelectionProxyModel() const
@@ -434,12 +436,6 @@ void AkonadiCollectionView::updateMenu()
     mDefaultCalendar->setEnabled( false );
     mAssignColor->setEnabled( false );
   }
-}
-
-void AkonadiCollectionView::selectionChanged()
-{
-  updateMenu();
-  updateView();
 }
 
 void AkonadiCollectionView::newCalendar()
